<?xml version="1.0"?>
<package format="2">
  <name>lightsfm</name>
  <version>1.0.0</version>
  <description>The lightsfm package</description>

  <maintainer email="noeperez@upo.com">Noé Pérez-Higueras</maintainer>


  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Propietary</license>

  <author email="iperde@upo.es">Ignacio Pérez-Hurtado</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>cmake_modules</build_depend> <!--required for TinyXML -->
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tinyxml</exec_depend>
 
  <export>
  </export>
</package>
